--- a/.travis.yml
+++ b/.travis.yml
@@ -304,7 +304,7 @@ jobs:
             allow-empty-commit: true
             local-dir: install/include
             on:
-                branch: master
+                tags: true
           - provider: pages
             target-branch: gh-pages
             github-token: $GITHUB_TOKEN
@@ -313,7 +313,7 @@ jobs:
             allow-empty-commit: true
             local-dir: install/share/Metal/doc
             on:
-                branch: master
+                tags: true
 
 before_install:
   - SOURCE_PATH="${TRAVIS_BUILD_DIR}"
