--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
     - name: test
       run: cd build; ctest -C Release --output-on-failure -E ^test.format
 
-  release:
+  doc:
     needs: [gcc, clang, xcode, msvc]
     runs-on: ubuntu-latest
     steps:
@@ -125,14 +125,26 @@ jobs:
       run: (! cmake --build build/ --target doc 2>&1 | grep --color -iE "warning|error")
     - name: deploy
       run: cmake --build build/ --target install && tree ${PWD}/install/
-    - name: gh-pages
+    - name: release
       if: github.event_name == 'release'
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: install/share/Metal/doc
-    - name: standalone
+
+  standalone:
+    needs: [gcc, clang, xcode, msvc]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: install
+      run: sudo apt-get install -y tree
+    - name: configure
+      run: cmake -H. -Bbuild/ -DCMAKE_INSTALL_PREFIX=${PWD}/install/
+    - name: deploy
+      run: cmake --build build/ --target install && tree ${PWD}/install/
+    - name: release
       if: github.event_name == 'release'
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
