[ci] fix clang-format version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: install
       run: |
-        sudo sudo add-apt-repository "deb http://apt.llvm.org/$(lsb_release -sc)/ llvm-toolchain-$(lsb_release -sc) main"
+        sudo sudo add-apt-repository "deb http://apt.llvm.org/$(lsb_release -sc)/ llvm-toolchain-$(lsb_release -sc)-10 main"
         sudo apt-get update
-        sudo apt-get install -y clang clang-format
+        sudo apt-get install -y clang-10 clang-format-10
     - name: configure
       run: cmake -H. -Bbuild/
     - name: lint
