--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
   format:
     runs-on: ubuntu-latest
     env:
-      CXX: 'clang++'
+      CXX: 'clang++-10'
     steps:
     - uses: actions/checkout@v1
     - name: install
@@ -26,7 +26,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y clang-10 clang-format-10
     - name: configure
-      run: cmake -H. -Bbuild/
+      run: cmake -H. -Bbuild/ -DCLANG_FORMAT=/usr/bin/clang-format-10
     - name: lint
       run: cd build && ctest --output-on-failure -R ^test.format
 
