improve warning message when boost is not found
... to make the minimum required version clear

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(Boost)
 set(exclude)
 if(NOT Boost_FOUND OR Boost_MINOR_VERSION LESS 61)
     list(APPEND exclude "sfinae")
-    message(WARNING "boost not found - target 'example.sfinae' will be unavailable.")
+    message(WARNING "boost 1.61+ not found - target 'example.sfinae' will be unavailable.")
 else()
     include_directories(${Boost_INCLUDE_DIRS})
 endif()
